--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <body>
     
+    <h1>test</h1>
     <!-- a-frame scene -->
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
