--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
         container: document.querySelector("#container"),
         imageTargetSrc: "https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/examples/image-tracking/assets/card-example/card.mind"
       });
-      const {renderer, scene, camera} = mindarThree;
-      const anchor = mindarThree.addAnchor(0);
-      const geometry = new THREE.PlaneGeometry(1, 0.55);
-      const material = new THREE.MeshBasicMaterial( {color: 0x00ffff, transparent: true, opacity: 0.5} );
-      const plane = new THREE.Mesh( geometry, material );
-      anchor.group.add(plane);
+      const {renderer, scene, camera, geometry, material, mesh} = mindarThree;
       const start = async() => {
         await mindarThree.start();
         renderer.setAnimationLoop(() => {
@@ -39,8 +34,47 @@
       }
 	    start();
 
+      init();
+      animate();
+
+      function init() {
+
+          scene = new THREE.Scene();
+
+          camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 10000);
+          camera.position.z = 500;
+          scene.add(camera);
+
+          geometry = new THREE.CubeGeometry(200, 200, 200);
+          material = new THREE.MeshNormalMaterial();
+
+          mesh = new THREE.Mesh(geometry, material);
+          scene.add(mesh);
+
+          renderer = new THREE.CanvasRenderer();
+          renderer.setSize(window.innerWidth, window.innerHeight);
+
+      }
+
+      function animate() {
+
+          requestAnimationFrame(animate);
+          render();
+
+      }
+
+      function render() {
+
+          mesh.rotation.x += 0.01;
+          mesh.rotation.y += 0.02;
+
+          renderer.render(scene, camera);
+
+      }
+
     </script>
 
   </body>
 
 </html>
+
