--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image-aframe.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js"></script>
     
+
+    <style>
+      body {
+	      margin: 0;
+      }
+      #container {
+        width: 100vw;
+        height: 100vh;
+        position: relative;
+        overflow: hidden;
+      }
+    </style>
+
   </head>
 
   <body>
@@ -25,7 +38,12 @@
         container: document.querySelector("#container"),
         imageTargetSrc: "https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/examples/image-tracking/assets/card-example/card.mind"
       });
-      const {renderer, scene, camera, geometry, material, mesh} = mindarThree;
+      const {renderer, scene, camera} = mindarThree;
+      const anchor = mindarThree.addAnchor(0);
+      const geometry = new THREE.PlaneGeometry(1, 0.55);
+      const material = new THREE.MeshBasicMaterial( {color: 0x00ffff, transparent: true, opacity: 0.5} );
+      const plane = new THREE.Mesh( geometry, material );
+      anchor.group.add(plane);
       const start = async() => {
         await mindarThree.start();
         renderer.setAnimationLoop(() => {
@@ -33,44 +51,6 @@
         });
       }
 	    start();
-
-      init();
-      animate();
-
-      function init() {
-
-          scene = new THREE.Scene();
-
-          camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 10000);
-          camera.position.z = 500;
-          scene.add(camera);
-
-          geometry = new THREE.CubeGeometry(200, 200, 200);
-          material = new THREE.MeshNormalMaterial();
-
-          mesh = new THREE.Mesh(geometry, material);
-          scene.add(mesh);
-
-          renderer = new THREE.CanvasRenderer();
-          renderer.setSize(window.innerWidth, window.innerHeight);
-
-      }
-
-      function animate() {
-
-          requestAnimationFrame(animate);
-          render();
-
-      }
-
-      function render() {
-
-          mesh.rotation.x += 0.01;
-          mesh.rotation.y += 0.02;
-
-          renderer.render(scene, camera);
-
-      }
 
     </script>
 
