--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           container: document.querySelector("#container"),
           imageTargetSrc: "https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/examples/image-tracking/assets/card-example/card.mind"
         });
-        const {renderer, scene, camera} = mindarThree;
+        let {renderer, scene, camera} = mindarThree;
         // const anchor = mindarThree.addAnchor(0);
         // const geometry = new THREE.PlaneGeometry(1, 0.55);
         // const material = new THREE.MeshBasicMaterial( {color: 0x00ffff, transparent: true, opacity: 0.5} );
